<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">公差查询</string>
    <string name="action_settings">关于</string>
    <string name="axle_hole">基孔制/基轴制:</string>
    <string name="tolsymbol">公差代号:</string>
    <string name="tolgrade">公差等级:</string>
    <string name="tolquery">查 询</string>
    <string name="size">尺寸</string>
    <string name="toldefault">-.---</string>
    <string name="sizedefault">-(-)</string>
    <string name="copyright">According to GB1800.3\n (ISO286–1:1988)\nCopyright © 2019~2020\nFC.LONG. All Rights Reserved.</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_0">0</string>
    <string name="number_dot">.</string>
    <string name="number_done">完成</string>
    <string name="number_minus">-</string>
    <string name="number_plus">+</string>
    <string name="number_backspace">&lt;-</string>
    <string name="number_next">下一步</string>
    <string name="none" />
    <string name="shaft_base">基轴制</string>
    <string name="hole_base">基孔制</string>

</resources>