<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:drawable/title_bar"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:padding="4dp" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical" >
        
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/key_btn_nor"
            android:text="@string/number_7"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/key_btn_nor"
            android:text="@string/number_8"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/key_btn_nor"
            android:text="@string/number_9"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/key_btn_nor"
            android:text="@string/number_4"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/key_btn_nor"
            android:text="@string/number_5"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/key_btn_nor"
            android:text="@string/number_6"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/key_btn_nor"
            android:text="@string/number_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/key_btn_nor"
            android:text="@string/number_2"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/key_btn_nor"
            android:text="@string/number_3"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button10"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/key_btn_nor"
            android:text="@string/number_minus"
            android:textAppearance="?android:attr/textAppearanceLargeInverse"
            android:visibility="gone" />

        <Button
            android:id="@+id/button11"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:background="@drawable/key_btn_nor"
            android:text="@string/number_0"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/button12"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/key_btn_nor"
            android:text="@string/number_dot"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        android:orientation="vertical"
        android:paddingLeft="4dp" >

        <ImageButton
            android:id="@+id/button13"
            android:layout_width="fill_parent"
            android:layout_height="96dp"
            android:background="@drawable/key_btn_fun"
            android:contentDescription="@string/none"
            android:src="@drawable/key_fun_backspace_f"
            android:text="@string/number_0" />

        <Button
            android:id="@+id/button14"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/key_btn_fun"
            android:text="@string/number_next"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </LinearLayout>

</LinearLayout>
