<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_weight="1"
        android:background="@android:drawable/editbox_background"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RadioGroup
                android:id="@+id/radioGroupBase"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="4dp">

                <RadioButton
                    android:id="@+id/radioButtonShaft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_round_light_radiogroup_left"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/shaft_base" />

                <RadioButton
                    android:id="@+id/radioButtonHole"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-1dp"
                    android:background="@drawable/bg_round_light_radiogroup_right"
                    android:button="@null"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/hole_base" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <NumberPicker
                    android:id="@+id/numberPickerSymbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:descendantFocusability="blocksDescendants" />

                <NumberPicker
                    android:id="@+id/numberPickerLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:descendantFocusability="blocksDescendants" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/RelativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:hint="@string/size"
                    android:inputType="numberDecimal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/tvNSize"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="-4dp"
                    android:layout_marginTop="4dp"
                    android:paddingStart="6dp"
                    android:text="@string/sizedefault"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/tvTolerence"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/toldefault"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/LinearLayoutNumberPad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>

</LinearLayout>
